--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
     }
+    ext {
+        lifecycle_version = "2.2.0"
+        kotlin_version = "1.4.10"
+        nav_version = "2.3.0"
+        koin_version = "2.2.0-alpha-1"
+        room_version = "2.2.5"
+        glide_version = "4.11.0"
+        retrofit_version = "2.9.0"
+        interceptor_version = "4.7.2"
+        easypermission_version = "3.0.0"
+        navigationresult_version = "1.0.1"
+        gson_version = "2.8.6"
+    }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,6 +30,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
